test/parsing/vass/wrong-unended-string-3.good
wrong-unended-string-3.chpl:2: error: EOF in string
wrong-unended-string-3.chpl:2: syntax error
